# OpenCV-capture-framework

./: CMakeLists.txt  Doxyfile  README.md  main.cpp  still_config.cpp  still_config.h.in
OpenCV_V4L2_directFormat_videoio/: CMakeLists.txt  cap.cpp  cap_images.cpp  cap_v4l.cpp
OpenCV_V4L2_directFormat_videoio/opencv2/: retrieve.hpp  videoio_mod.hpp
nvwa/: debug_new.cpp
still/: CMakeLists.txt  measure.cpp  measure.h  still.cpp  still.h
util/: CMakeLists.txt  util.cpp  util.h
